# ChangeLog for dev-perl/OpenCA-REQ
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  11 Aug 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  OpenCA-REQ-0.9.52.ebuild:
  stable in x86

*OpenCA-REQ-0.9.52 (06 Aug 2009)

  06 Aug 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  +OpenCA-REQ-0.9.52.ebuild, +metadata.xml:
  New ebuild, initial commit in rion overlay
