@@ -1,4 +1,4 @@
 DIST OpenCA-REQ-0.9.52.tar.gz 9712 RMD160 0628710df3c6b3316a615103cd648b125bbab2f1 SHA1 00e7e2f46103803dc78b304fe2b198af93e14740 SHA256 6aacfe1b8340c436e1da0041dd8be1258f2f7a636f27c00da8f207c8bfaa4c2c
-EBUILD OpenCA-REQ-0.9.52.ebuild 432 RMD160 00faea5a268d250c8eb7966703b0c679bcbaef55 SHA1 39e5d61275734fc067dfa31ccec2f47a37a2bde8 SHA256 200ab16b01f5e28451a3e0b20ee4984e3444865dd60562cb684cf0c3d9bec6ce
-MISC ChangeLog 395 RMD160 4d5dc2304cbe83661ad7355d9fc639ce12a893d6 SHA1 a6e5ff42c81ca30909b514ee694434127de74d8e SHA256 e9791036a7447d58cf8ea1da2c35f07493be92030e459ec7f606c43a6fc1074d
+EBUILD OpenCA-REQ-0.9.52-r1.ebuild 641 RMD160 ea2e2f5c8a4e7f86f451c89b3e5c3f322ca7c556 SHA1 0dfeb712528fa3dbcaed8d56dce0f9cb9fa608e8 SHA256 78445da7558fcc6bda216825b9d74880318b6cf5fda8123c21c374a06d6fce9d
+MISC ChangeLog 523 RMD160 cae46b47cc771337d05749c6df4a905b86b0b275 SHA1 84f4da8087821212229e0ebc3e0b5a816b1ba9bd SHA256 440b4ce42649499750d93abac30c6994fd1f5ca8e3a82b01e783f32481880919
 MISC metadata.xml 709 RMD160 8e0c994d81db3ccc3116ba84cf14fbfaecc5a84c SHA1 82255311d0a5f1b6b08405c0ad1f1379a9554897 SHA256 f29633dbf19db9032af24e9a3e0f8ae80f0a58f1ee0523ca6cb051202e82ba1b
