@@ -4,7 +4,7 @@
 
 EAPI="2"
 
-inherit perl-openca
+inherit perl-module
 
 DESCRIPTION="Perl extension to easily manage Cert REQUESTs"
 HOMEPAGE="http://search.cpan.org/~madwolf/OpenCA-REQ-0.9.52/"
@@ -17,3 +17,12 @@ IUSE=""
 
 DEPEND=""
 RDEPEND="dev-perl/X500-DN"
+
+src_prepare() {
+	perl-module_src_prepare
+
+	sed -i -e /prova.pl/d "${S}"/MANIFEST || die "sed failed"
+	einfo "editing MANIFEST"
+	rm -r "${S}"/prova.pl || die "Not removed prova.pl"
+	einfo "removed prova.pl"
+}
