@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/OpenCA-REQ
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  14 Mar 2010; A. Vinogradov <spamslepnoga@inbox.ru>
+  -OpenCA-REQ-0.9.52.ebuild, +OpenCA-REQ-0.9.52-r1.ebuild:
+  clean eclass
 
   11 Aug 2009; A. Vinogradov <spamslepnoga@inbox.ru>
   OpenCA-REQ-0.9.52.ebuild:
